--- a/style.css
+++ b/style.css
@@ -213,11 +213,22 @@ section {
   gap: 1rem;
 }
 
+.ArrowDownLobby {
+  position: relative
+  ;
+}
+
 /* ICONS */
 
 .icon {
   cursor: pointer;
   height: 2rem;
+}
+
+#ArrowStarLobby {
+  position: relative;
+  display: flex
+
 }
 
 /* BUTTONS */
